// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle 1`] = `
"// @mizchi/bundler generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
const _$_modules = {
  \\"/foo.js\\": (_$_exports) => {
    console.log(\\"eval foo once\\");
    _$_exports.default = \\"foo$default\\";
    _$_exports.b = \\"b\\";
    _$_exports.a = \\"a\\";
    return _$_exports;
  },
  \\"/bar.js\\": (_$_exports) => {
    const { default: foo } = _$_import(\\"/foo.js\\");

    console.log(\\"eval bar once\\");
    _$_exports.default = \\"bar$\\" + foo;
    return _$_exports;
  },
};

// -- entry --

const { default: foo, a: a, b: c } = _$_import(\\"/foo.js\\");

const { default: bar } = _$_import(\\"/bar.js\\");

export const x: number = c;
export default 1;
console.log(foo, bar);
"
`;

exports[`bundle 2`] = `
"// @mizchi/bundler generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
const _$_modules = {};

// -- entry --

console.log(\\"eval foo once\\");
export default \\"foo$default\\";
export const b = \\"b\\";
export const a = \\"a\\";
"
`;

exports[`bundle 3`] = `
"// @mizchi/bundler generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
const _$_modules = {
  \\"/foo.js\\": (_$_exports) => {
    console.log(\\"eval foo once\\");
    _$_exports.default = \\"foo$default\\";
    return _$_exports;
  },
};

// -- entry --

const { default: foo } = _$_import(\\"/foo.js\\");

console.log(\\"eval bar once\\");
export default \\"bar$\\" + foo;
"
`;

exports[`entry: export {default as b} from "./m.js" 1`] = `
"// @mizchi/bundler generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
const _$_modules = {
  \\"/m.js\\": (_$_exports) => {
    {
      _$_exports.a = _$_import(\\"/up.js\\").default;
    }
    return _$_exports;
  },
  \\"/up.js\\": (_$_exports) => {
    return _$_exports;
  },
};

// -- entry --

export { a as b } from \\"./m.js\\";
"
`;

exports[`export {x, y as z} from "./m.js" 1`] = `
"// @mizchi/bundler generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));
const _$_modules = {
  \\"/up.js\\": (_$_exports) => {
    _$_exports.up = 1;
    _$_exports.down = 2;
    return _$_exports;
  },
  \\"/m.js\\": (_$_exports) => {
    {
      _$_exports.a = _$_import(\\"/up.js\\").up;
      _$_exports.down = _$_import(\\"/up.js\\").down;
    }
    return _$_exports;
  },
};

// -- entry --

const { a: b } = _$_import(\\"/m.js\\");

globalThis.__export_b = b;
"
`;
